<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/mainBgColor">

    <TextView
        android:id="@+id/ui_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme_group_header"
        android:theme="@style/LOSSectionHeaderStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckedTextView
        android:id="@+id/accent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accent_section"
        android:theme="@style/LOSPreference"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ui_header" />

    <CheckedTextView
        android:id="@+id/dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theme_section"
        android:theme="@style/LOSPreference"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accent" />

    <View
        android:id="@+id/divider1"
        style="@style/LOSListDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dark" />

    <TextView
        android:id="@+id/other_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_group_header"
        android:theme="@style/LOSSectionHeaderStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dark" />

    <CheckedTextView
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_section"
        android:theme="@style/LOSPreference"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/other_header" />

</androidx.constraintlayout.widget.ConstraintLayout>